@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.226 2003/04/09 10:42:56 stelian Exp $
+$Id: CHANGES,v 1.227 2003/04/10 07:59:02 stelian Exp $
 
 Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 =======================================================================
@@ -86,6 +86,11 @@ Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 
 19.	Made dump work with 2.5 kernel end of tape early warning semantics.
 	Thanks to Kai Makisara <Kai.Makisara@kolumbus.fi> for the patch.
+
+20.	Fixed a bug which caused dump -w|-W not to work anymore, because
+	the fs_freq and fs_passno fields in /etc/mtab are always set
+	to 0 0. Thanks to Trent Piepho <xyzzy@speakeasy.org> for 
+	reporting the bug.
 
 Changes between versions 0.4b32 and 0.4b33 (released February 10, 2003)
 =======================================================================
